fixed spacing issue

--- a/src/_includes/components/css/submit-order.css
+++ b/src/_includes/components/css/submit-order.css
@@ -164,6 +164,7 @@ main label {
 
 #order-totals p .info-pill {
   font-size: var(--font-size-3);
+  white-space: normal;
 }
 
 .region-select {
